--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,15 @@ body {
 
 .timer {
     text-align: center;
+    font-family:monospace, serif;
+    
 }
 
 @media (min-width: 768px) {
     .timer {
         padding: 0 10rem;
         text-align: right;
+        font-family:monospace, serif;
     }
 }
 
