--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,11 @@ body {
     font-size: 100px;
 }
 
+.v-enter-active,
 .v-leave-active {
     transition: 0.5s;
 }
+.v-enter,
 .v-leave-to {
     opacity: 0;
     transform: translateY(50px)
