--- a/css/style2.css
+++ b/css/style2.css
@@ -5,14 +5,11 @@ body {
 }
 
 /* 全体のレイアウト */
-
-/* 親div */
 .parent {
     display: flex;
     height: 100%;
     width: 100%;
 }
-/* 子div */
 .left {
     width: 100%;
 }
@@ -28,7 +25,14 @@ body {
     flex-grow: 3;
 }
 
-/* 上に表示するタイマー */
+.app {
+    height: 100%;
+    width: 100%;
+}
+.app input {
+    margin: 2rem 0 3rem 0;
+}
+
 .timer {
     text-align: right;
     margin: 8px 0;
@@ -36,8 +40,6 @@ body {
     font-weight: bold;  /* 太字 */
     font-family:monospace, serif;
 }
-
-/* 終了時に表示するタイマー */
 .timer_finish {
     animation: flash 1.5s linear infinite;
     text-align: right;
@@ -148,7 +150,6 @@ body {
 /* 終了後に中央にタイマー表示 */
 #time{
     margin: 20px 0;
-    font-size: 60px;
     text-align: center;
     font-weight: bold;  /* 太字 */
     font-family:monospace, serif;
