--- a/css/style2.css
+++ b/css/style2.css
@@ -16,6 +16,10 @@ body,
 /* 子div */
 .left {
     width: 100%;
+    /*  */
+    cursor:-moz-grab;
+    cursor:-webkit-grab;
+    cursor: grab;
 }
 .center {
     justify-content: center;
@@ -23,10 +27,19 @@ body,
     display: flex;
     width: 70rem;
     flex-grow: 3;
+/*  */
+    cursor:-moz-grabbing;
+    cursor:-webkit-grabbing;
+    cursor: grabbing;
 }
 .right {
     width: 100%;
     flex-grow: 3;
+/*  */
+    cursor:-moz-grab;
+    cursor:-webkit-grab;
+    cursor: grab;
+    
 }
 /* 上に表現するタイマー */
 .timer {
@@ -216,3 +229,4 @@ body,
 .after-starting {
     color: #000;
 }
+
