--- a/css/style3.css
+++ b/css/style3.css
@@ -143,25 +143,22 @@ body,
 
 /* めくるアニメーション */
 @keyframes falling_paper {
-    /* 初期位置 */
+    /* 開始*/
     0% {
         opacity: 1; /* 透明度 */
     }
+    2%{
+        transform: translateX(20px);
+    }
     20%{
         opacity: 0.9;
-        transform:rotate(-45deg,0deg) skew(10deg, 10deg)
+        transform:translateX(20px) rotate(-45deg,0deg) skew(10deg, 10deg)
     }
+    /* 終了 */
     100% {
         opacity: 0;
-        transform:translateY(200px) translateX(500px) rotate(-45deg) skew(10deg, 10deg);
+        transform:translateY(200px) translateX(520px) rotate(-45deg) skew(10deg, 10deg);
     }
-    /* 80% {
-        opacity: 0.4;
-        transform:translateY(200px) translateX(500px) rotate(-45deg);
-    }
-    100% {
-        opacity: 0;
-    } */
 }
 
 
