--- a/css/style4.css
+++ b/css/style4.css
@@ -22,7 +22,7 @@ body,
 /* 子div */
 .left {
     width: 100%;
-
+    background-color: #f2f2f2;
     /* cursor */
     cursor:-moz-grab;
     cursor:-webkit-grab;
@@ -43,7 +43,7 @@ body,
 .right {
     width: 100%;
     flex-grow: 3;
-    
+    background-color: #f2f2f2;
     /* cursor */
     cursor:-moz-grab;
     cursor:-webkit-grab;
